Update teaser image source in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="teaser">
-        <img src="assets/start.png" alt="teaser" />
+        <img src="assets/teaser.png" alt="teaser" />
         <div class="cap">Teaser: One-sentence summary of what the figure shows.</div>
       </div>
     </div>
