--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
     const images = [
       "/JointConn-v2/assets/teaser/1.png",
       "/JointConn-v2/assets/teaser/2.png",
-      "/JointConn-v2/assets/teaser/3.png"
+      "/JointConn-v2/assets/teaser/3.png",
+      "/JointConn-v2/assets/teaser/4.png"
     ];
 
     const carousel = document.getElementById("teaserCarousel");
