Update paper title in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Hero -->
   <header class="hero">
     <div class="container hero-inner">
-      <h1>Your Paper Title</h1>
+      <h1>JointConn-v2: Learning a Joint Vector Field with Diffusion Transformers for Cross-Scale Connectivity and Dual-Timestep Modeling</h1>
       <p class="sub">Submitted to XXX 2026 (Double-blind)</p>
       <p class="authors">Anonymous Authors</p>
 
