--- a/index.html
+++ b/index.html
@@ -237,7 +237,118 @@
     </div>
   </footer>
 
-  <script>
+<script>
+  (function () {
+    // === 1) 图片列表：自动按 1..N 编号 ===
+    const N = 4; // 你现在是 4 张，以后改这里即可
+    const images = Array.from({ length: N }, (_, i) =>
+      `/JointConn-v2/assets/teaser/${i + 1}.png`
+    );
+
+    const carousel = document.getElementById("teaserCarousel");
+    const imgEl = document.getElementById("teaserImg");
+    const dotsEl = document.getElementById("teaserDots");
+    const prevBtn = carousel.querySelector(".prev");
+    const nextBtn = carousel.querySelector(".next");
+
+    let idx = 0;
+
+    // === 2) 自动轮播参数 ===
+    const AUTOPLAY_MS = 4000;     // 每张停留时间
+    const RESUME_AFTER_MS = 6000; // 手动操作后，延迟多久恢复自动轮播
+
+    let timer = null;
+    let resumeTimer = null;
+
+    function renderDots() {
+      dotsEl.innerHTML = "";
+      images.forEach((_, i) => {
+        const d = document.createElement("button");
+        d.type = "button";
+        d.className = "carousel-dot" + (i === idx ? " active" : "");
+        d.ariaLabel = "Go to image " + (i + 1);
+        d.addEventListener("click", () => {
+          stopAutoplayTemporarily();
+          setIndex(i);
+        });
+        dotsEl.appendChild(d);
+      });
+    }
+
+    function setIndex(i) {
+      idx = (i + images.length) % images.length;
+      imgEl.src = images[idx];
+      Array.from(dotsEl.children).forEach((node, k) => {
+        node.classList.toggle("active", k === idx);
+      });
+    }
+
+    function next() { setIndex(idx + 1); }
+    function prev() { setIndex(idx - 1); }
+
+    // === 3) 自动轮播控制 ===
+    function startAutoplay() {
+      stopAutoplay(); // 防止重复开多个 timer
+      timer = setInterval(() => {
+        // 页面不可见就不轮播
+        if (document.hidden) return;
+        next();
+      }, AUTOPLAY_MS);
+    }
+
+    function stopAutoplay() {
+      if (timer) clearInterval(timer);
+      timer = null;
+    }
+
+    function stopAutoplayTemporarily() {
+      stopAutoplay();
+      if (resumeTimer) clearTimeout(resumeTimer);
+      resumeTimer = setTimeout(() => {
+        startAutoplay();
+      }, RESUME_AFTER_MS);
+    }
+
+    // === 4) 绑定交互（手动仍可用） ===
+    nextBtn.addEventListener("click", () => { stopAutoplayTemporarily(); next(); });
+    prevBtn.addEventListener("click", () => { stopAutoplayTemporarily(); prev(); });
+
+    // 点击图片区域左右切换：左半=上一张，右半=下一张
+    carousel.addEventListener("click", (e) => {
+      if (e.target.closest(".carousel-btn") || e.target.closest(".carousel-dot")) return;
+      stopAutoplayTemporarily();
+      const rect = carousel.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      if (x < rect.width / 2) prev(); else next();
+    });
+
+    // 键盘左右键切换（轮播容器可聚焦）
+    carousel.addEventListener("keydown", (e) => {
+      if (e.key === "ArrowLeft") { stopAutoplayTemporarily(); prev(); }
+      if (e.key === "ArrowRight") { stopAutoplayTemporarily(); next(); }
+    });
+
+    // 悬停暂停，移开恢复
+    carousel.addEventListener("mouseenter", () => stopAutoplay());
+    carousel.addEventListener("mouseleave", () => startAutoplay());
+
+    // 标签页切换：不可见暂停，可见恢复
+    document.addEventListener("visibilitychange", () => {
+      if (document.hidden) stopAutoplay();
+      else startAutoplay();
+    });
+
+    // 预加载
+    images.forEach((u) => { const im = new Image(); im.src = u; });
+
+    renderDots();
+    setIndex(0);
+    startAutoplay();
+  })();
+</script>
+
+  
+  <!-- <script>
     function copyBib() {
       const text = document.querySelector("#bibtex code").innerText;
       navigator.clipboard.writeText(text);
@@ -308,7 +419,7 @@
     renderDots();
     setIndex(0);
   })();
-</script>
+</script> -->
 
 </body>
 </html>
