Change link text from 'Supplementary' to 'Code'

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div class="btns">
         <a class="btn" href="paper/paper.pdf" target="_blank" rel="noopener">Paper</a>
-        <a class="btn" href="paper/supp.pdf" target="_blank" rel="noopener">Supplementary</a>
+        <a class="btn" href="paper/supp.pdf" target="_blank" rel="noopener">Code</a>
         <a class="btn" href="#results">More Results</a>
         <a class="btn ghost" href="#bibtex">BibTeX</a>
       </div>
