--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <a href="#method">Method</a>
         <a href="#results">Results</a>
         <a href="#ablations">Ablations</a>
-        <a href="#runtime">Runtime</a>
+        <!-- <a href="#runtime">Runtime</a>
         <a href="#failures">Failures</a>
-        <a href="#video">Video</a>
+        <a href="#video">Video</a> -->
         <a href="#bibtex">BibTeX</a>
       </div>
     </div>
@@ -176,7 +176,7 @@
       </div>
     </section>
 
-    <!-- Runtime -->
+    <!-- <!-- Runtime -->
     <section id="runtime" class="section">
       <h2>Runtime & Memory</h2>
       <div class="card">
@@ -193,7 +193,7 @@
         </table>
         <p class="cap">Measured on A100 (replace with your setup).</p>
       </div>
-    </section>
+    </section> 
 
     <!-- Failures -->
     <section id="failures" class="section">
@@ -214,7 +214,7 @@
         </video>
         <p class="cap">Demo video.</p>
       </div>
-    </section>
+    </section> -->
 
     <!-- BibTeX -->
     <section id="bibtex" class="section">
