--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <a href="#method">Method</a>
         <a href="#results">Results</a>
         <a href="#ablations">Ablations</a>
-        <!-- <a href="#runtime">Runtime</a>
-        <a href="#failures">Failures</a>
-        <a href="#video">Video</a> -->
+        <a href="#video">Video</a>
         <a href="#bibtex">BibTeX</a>
       </div>
     </div>
@@ -176,35 +174,7 @@
       </div>
     </section>
 
-    <!-- <!-- Runtime -->
-    <section id="runtime" class="section">
-      <h2>Runtime & Memory</h2>
-      <div class="card">
-        <table class="tbl">
-          <thead>
-            <tr>
-              <th>Method</th><th>Steps</th><th>Time / img</th><th>VRAM</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td>Ours</td><td>30</td><td>0.8s</td><td>10GB</td></tr>
-            <tr><td>Baseline A</td><td>50</td><td>1.5s</td><td>12GB</td></tr>
-          </tbody>
-        </table>
-        <p class="cap">Measured on A100 (replace with your setup).</p>
-      </div>
-    </section> 
-
-    <!-- Failures -->
-    <section id="failures" class="section">
-      <h2>Failure Cases & Limitations</h2>
-      <p class="muted">A small honest section increases trust.</p>
-      <div class="grid">
-        <figure><img src="assets/failures/f1.png" alt=""><figcaption>Failure: reflective surfaces.</figcaption></figure>
-        <figure><img src="assets/failures/f2.png" alt=""><figcaption>Failure: extreme viewpoint.</figcaption></figure>
-      </div>
-    </section>
-
+   
     <!-- Video -->
     <section id="video" class="section">
       <h2>Video</h2>
@@ -214,7 +184,7 @@
         </video>
         <p class="cap">Demo video.</p>
       </div>
-    </section> -->
+    </section>
 
     <!-- BibTeX -->
     <section id="bibtex" class="section">
