--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!-- Method -->
     <section id="method" class="section">
       <h2>Method</h2>
-      <img class="figure" src="assets/method.png" alt="method overview" />
+      <img class="figure" src="assets/MAIN1.png" alt="method overview" />
       <p class="cap">Figure: Overall pipeline.</p>
 
       <div class="twocol">
@@ -98,7 +98,6 @@
           <ul>
             <li>Backbone: XXX</li>
             <li>Conditioning: text / depth / edges / seg</li>
-            <li>Training objective: XXX</li>
           </ul>
         </div>
         <div class="card">
