--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
       </p>
       <div class="callouts">
         <div class="card">
-          <h3>Key Idea</h3>
-          <p>One-line description of the main idea.</p>
+          <h3>Key Words</h3>
+          <p>Diffusion Transformer, Flow Matching, LoRA, Cross-modal Generation, Depth-conditioned Generation</p>
         </div>
         <div class="card">
           <h3>What’s New</h3>
-          <p>Two or three bullets of contributions.</p>
-        </div>
-        <div class="card">
-          <h3>Why It Works</h3>
-          <p>Short intuition / mechanism.</p>
+          <p>1. JointConn-v2: a geometry-aware, controllable cross-branch router. By combining sample-level content gating with token-level region routing, it enables adaptive per-sample/per-location coupling and boundary-prior structural alignment, substantially improving RGB–Depth consistency and controllability.
+
+2. GCM-WFM: a stable and unified training objective. Centered on a preconditioned heteroscedastic vector Flow matching loss, it encodes temporal weights, gating, routing, and edge energy into a diagonal weighting with stop-gradient, yielding more stable optimization.
+
+3. We propose a highly efficient and practical training framework. We train only LoRA (intra-branch) and JointConn-v2 (inter-branch) on a Flux-style DiT backbone; together with a packed latent and a timestep controller, this design exploits properties of diffusion transformers and works uniformly for both joint generation and depth-conditioned generation.</p>
         </div>
       </div>
     </section>
