--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
 
       <div class="grid">
         <figure>
-          <img src="assets/results/main_cmp1.png" alt="main cmp1" />
-          <figcaption>Dataset A: Ours vs Baseline.</figcaption>
+          <img src="assets/start3.png" alt="main cmp1" />
+          <figcaption>More generated results displayed.</figcaption>
         </figure>
         <figure>
-          <img src="assets/results/main_cmp2.png" alt="main cmp2" />
-          <figcaption>Dataset B: Ours preserves geometry better.</figcaption>
+          <img src="assets/jointdingxing.png" alt="main cmp2" />
+          <figcaption>Joint Generation.</figcaption>
         </figure>
         <figure>
-          <img src="assets/results/main_cmp3.png" alt="main cmp3" />
-          <figcaption>Hard case: fine structures.</figcaption>
+          <img src="assets/T2I_quality.png" alt="main cmp3" />
+          <figcaption>Deep Condition Generation.</figcaption>
         </figure>
       </div>
     </section>
