--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="grid">
         <figure>
           <img src="assets/start3.png" alt="main cmp1" />
-          <figcaption>More generated results displayed.</figcaption>
+          <figcaption>More generated results.</figcaption>
         </figure>
         <figure>
           <img src="assets/jointdingxing.png" alt="main cmp2" />
@@ -125,13 +125,13 @@
         <div class="card">
           <h3>Quantitative</h3>
           <p class="muted">Paste a table here (HTML) or embed a screenshot.</p>
-          <img class="figure" src="assets/ablations/table.png" alt="ablation table" />
-          <p class="cap">Table: Ablation on components.</p>
+          <img class="figure" src="assets/full-LoRA-connv2.png" alt="ablation table" />
+          <p class="cap">Main module ablation assessment heatmap.</p>
         </div>
         <div class="card">
           <h3>Qualitative</h3>
-          <img class="figure" src="assets/ablations/qual.png" alt="ablation qual" />
-          <p class="cap">More cases consistent with Table X.</p>
+          <img class="figure" src="assets/Overlap.png" alt="ablation qual" />
+          <p class="cap">Generalization studies demonstrate that our method possesses deep evaluation capabilities.</p>
         </div>
       </div>
     </section>
