--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#method">Method</a>
         <a href="#results">Results</a>
         <a href="#ablations">Ablations</a>
-        <a href="#video">Video</a>
+        <!-- <a href="#video">Video</a> -->
         <a href="#bibtex">BibTeX</a>
       </div>
     </div>
@@ -137,7 +137,7 @@
 
    
     <!-- Video -->
-    <section id="video" class="section">
+    <!-- <section id="video" class="section">
       <h2>Video</h2>
       <div class="card">
         <video class="video" controls playsinline>
@@ -145,7 +145,7 @@
         </video>
         <p class="cap">Demo video.</p>
       </div>
-    </section>
+    </section> -->
 
     <!-- BibTeX -->
     <section id="bibtex" class="section">
